Fix alignment of items in the account gallery in web UI and load more per page

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -4764,7 +4764,6 @@ a.status-card.compact:hover {
 .account-gallery__container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   padding: 4px 2px;
 }
 
